[package]
name = "webdavc"
version = "0.1.1"
authors = ["godgetget <bhd.dhp@gmail.com>"]
edition = "2018"
description = "async webdav client. fork from rustydav https://docs.rs/rustydav"
homepage = "https://github.com/dbian/rustydav_async"
documentation = "https://docs.rs/webdavc"
repository = "https://github.com/dbian/rustydav_async"
keywords = ["webdav", "client", "async"]
license = "GPL-3.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.27.1"
reqwest = { version = "0.11" }

[dev-dependencies]
tokio = { version = "1.23.0", features = ["full"] }
